# qml-parser

./: .env  .env.dist  .gitignore  .gitmodules  .travis.yml  AstGenerator.cpp  AstGenerator.h  AstGeneratorBase.cpp  AstGeneratorBase.h  AstGeneratorJavascriptBlock.cpp  AstGeneratorJavascriptBlock.h  CMakeLists.txt  Location.cpp  Location.h  README.md  Vagrantfile  main.cpp  package.json  parser.cpp  parser.h  qml-parser.pro  qmlfmt.cpp
.github/workflows/: ci.yml  publish.yml
ast_generator/: CMakeLists.txt  ast_generator.cpp  ast_generator.h
qmljs/: CMakeLists.txt
sandbox/: main.qml  test.json  test.qml  test_function_multiple_args.qml  test_object_binding.qml  test_object_binding_array.qml  test_object_binding_grouped.qml  test_object_nested.qml  test_property_alias.qml  test_property_default.qml  test_property_object.qml  test_signal_single_arg.qml
scripts/: install.js  package-for-linux.sh  package.sh
src/: index.d.ts  index.js
test/: CMakeLists.txt  main.cpp  testrunner.cpp  testrunner.h
tests/function_multiple_args/__snapshots__/: snapshot.spec.js.snap
tests/function_no_arg/: entry.qml
tests/function_no_arg/__snapshots__/: snapshot.spec.js.snap
tests/function_single_arg/: entry.qml  snapshot.spec.js
tests/function_single_arg/__snapshots__/: snapshot.spec.js.snap
tests/import/: entry.qml
tests/namespace/: entry.qml
tests/namespace/__snapshots__/: snapshot.spec.js.snap
tests/object_attached/: entry.qml
tests/object_attached/__snapshots__/: snapshot.spec.js.snap
tests/object_binding/__snapshots__/: snapshot.spec.js.snap
tests/object_binding_array/__snapshots__/: snapshot.spec.js.snap
tests/object_binding_block/: entry.qml
tests/object_binding_block/__snapshots__/: snapshot.spec.js.snap
tests/object_binding_grouped/__snapshots__/: snapshot.spec.js.snap
tests/object_nested/: snapshot.spec.js
tests/object_nested/__snapshots__/: snapshot.spec.js.snap
tests/object_on/: entry.qml
tests/object_on/__snapshots__/: snapshot.spec.js.snap
tests/property/: entry.qml
tests/property/__snapshots__/: snapshot.spec.js.snap
tests/property_alias/__snapshots__/: snapshot.spec.js.snap
tests/property_default/__snapshots__/: snapshot.spec.js.snap
tests/property_list/: entry.qml
tests/property_list/__snapshots__/: snapshot.spec.js.snap
tests/property_object/__snapshots__/: snapshot.spec.js.snap
tests/property_readonly/: entry.qml
tests/property_readonly/__snapshots__/: snapshot.spec.js.snap
tests/signal_multiple_args/: entry.qml
tests/signal_multiple_args/__snapshots__/: snapshot.spec.js.snap
tests/signal_no_arg/: entry.qml
tests/signal_no_arg/__snapshots__/: snapshot.spec.js.snap
tests/signal_single_arg/__snapshots__/: snapshot.spec.js.snap
